--- a/TicTacToe/Pages/Index.cshtml
+++ b/TicTacToe/Pages/Index.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Home page";
 }
 
-<h1>Hello World</h1>
+<h1>Dino-Diner</h1>
 
-<a asp-page="/ServerTicTacToeModel">Play Tic Tac Toe server style</a>
+<a asp-page="/Menu">Menu</a>
+<a asp-page="/Privacy">Privacy</a>
+<a asp-page="/About">About</a>
