List the items need to do

--- a/TicTacToe/Pages/Menu.cshtml
+++ b/TicTacToe/Pages/Menu.cshtml
@@ -4,5 +4,8 @@
     ViewData["Title"] = "Menu";
 }
 
-<h2>Menu</h2>
-
+<h1>Men</h1>
+<h2 <div class="menu-item"></div>>Combos</h2>
+<h2>Entrees</h2>
+<h2>Sides</h2>
+<h2>Drinks</h2>
