--- a/TicTacToe/Pages/Menu.cshtml
+++ b/TicTacToe/Pages/Menu.cshtml
@@ -4,8 +4,41 @@
     ViewData["Title"] = "Menu";
 }
 
-<h1>Men</h1>
-<h2 <div class="menu-item"></div>>Combos</h2>
+<h1>Menu</h1>
+<h2>Combos</h2>
+<div class="menu-item">
+    <div class="row">
+        @for(int i = 0; i < Model.combos.Count; i++)
+        {
+            <div>@Model.combos[i].ToString()
+               <div>@Model.combos[i].Price</div>
+               <div>@Model.combos[i].Calories</div>
+               <div>
+                  @for(int j = 0; j < Model.combos[i].Ingredients.Count; j++)
+                  {
+                      <div>@Model.combos[i].Ingredients[j].ToString()</div>
+                  }
+               </div>
+            </div>
+            
+        }
+    </div>
+</div>
 <h2>Entrees</h2>
+<div class="menu-item">
+    @for(int i = 0; i < Model.entrees.Count; i++)
+    {
+        <div>@Model.entrees[i].ToString()
+           <div>@Model.entrees[i].Price</div>
+           <div>@Model.entrees[i].Calories</div>
+           <div>
+               @for(int j = 0; j < Model.entrees[i].Ingredients.Count; j++)
+               {
+                   <div>@Model.entrees[i].Ingredients[j].ToString()</div>
+               }
+           </div>
+        </div>
+    }
+</div>
 <h2>Sides</h2>
 <h2>Drinks</h2>
